<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.scoproject.carmudi.ui.home.HomeActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include
            layout="@layout/toolbar"
            android:id="@+id/home_toolbar"/>
    </android.support.design.widget.AppBarLayout>
    <RelativeLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v4.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:id="@+id/home_swiperefresh"
            android:layout_above="@+id/home_progressbar"
            android:layout_height="match_parent">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/home_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </android.support.v4.widget.SwipeRefreshLayout>
        <LinearLayout
            android:visibility="gone"
            android:layout_alignParentBottom="true"
            android:id="@+id/home_progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
