<resources>
    <string name="app_name">Carmudi</string>
    <string-array name="sorting_list">
        <item>oldest</item>
        <item>newest</item>
        <item>price-low</item>
        <item>price-high</item>
        <item>mileage-low</item>
        <item>mileage-high</item>
    </string-array>
</resources>
