...
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">
                <ImageButton
                    android:background="@android:color/transparent"
                    android:id="@+id/toolbar_sort"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/ic_filter_list_white_24dp" />
...
